--- a/cliff.toml
+++ b/cliff.toml
@@ -1,6 +1,10 @@
   # git-cliff ~ configuration file
   # https://git-cliff.org/docs/configuration
 
+  [remote.github]
+  owner = "kubeflow"
+  repo = "sdk"
+
   [changelog]
   # Template for the changelog body
   body = """
@@ -13,12 +17,23 @@
   ## {{ group | striptags | trim | upper_first }}
 
   {% for commit in commits -%}
-  - {{ commit.message | split(pat="(#") | first | trim }}{% if commit.breaking %} [**breaking**]{% endif %}{% for link in commit.links %} ([{{ link.text }}]({{ link.href }})){% endfor %}{% if commit.github.username %} by @{{ commit.github.username }}{% endif %}
+  - {{ commit.message | split(pat="(#") | first | trim }}{% if commit.breaking %} [**breaking**]{% endif %}{% for link in commit.links %} ([{{ link.text }}]({{ link.href }})){% endfor %}{% if commit.remote.username %} by @{{ commit.remote.username }}{% endif %}
   {% endfor -%}
   {% endfor %}
+
+{%- if github -%}
+{% if github.contributors | filter(attribute="is_first_time", value=true) | length != 0 %}
+  ## New Contributors ❤️
+{% endif -%}
+{% for contributor in github.contributors | filter(attribute="is_first_time", value=true) %}
+  * @{{ contributor.username }} made their first contribution
+    {%- if contributor.pr_number %} in \
+      [#{{ contributor.pr_number }}](https://github.com/kubeflow/sdk/pull/{{ contributor.pr_number }}) \
+    {%- endif %}
+{%- endfor -%}
+{%- endif %}
   """
   trim = true
-  render_always = true
 
   [git]
   conventional_commits = false
@@ -30,17 +45,9 @@
   commit_parsers = [
       { message = "^feat", group = "New Features" },
       { message = "^fix", group = "Bug Fixes" },
-      { message = "^doc", group = "Documentation" },
-      { message = "^perf", group = "Performance" },
-      { message = "^refactor", group = "Refactor" },
-      { message = "^style", group = "Styling" },
-      { message = "^test", group = "Testing" },
-      { message = "^chore\\(release\\)", skip = true },
-      { message = "^chore\\(deps\\)", skip = true },
       { message = "^chore", group = "Maintenance" },
-      { message = "^ci", group = "Maintenance" },
-      { body = ".*security", group = "Security" },
       { message = "^revert", group = "Reverts" },
+      { message = "^Kubeflow SDK Official Release", skip = true },
       { message = ".*", group = "Other Changes" },
   ]
   filter_commits = false
@@ -49,8 +56,4 @@
   ]
   use_branch_tags = false
   topo_order = false
-  sort_commits = "oldest"
-
-[remote.github]
-owner = "kubeflow"
-repo = "sdk"
+  sort_commits = "newest"
