feat: Hyperparameter Optimization APIs in Kubeflow SDK (#124)
* Init commit

Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

* Create optimize() API

Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

* Set retain=True for Experiment

Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

* Fix location to Trainer utils

Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

* Implement get_job, list_jobs, and delete_job APIs

Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

* Add metrics and parameters to Trial object

Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

* Clarify message for objective

Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

* Move TrainJobTemplate to the Trainer types

Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

* Rename CRD to CR

Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

* Fix serialization of TrainJob

Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

* Rename ExecutionBackend to RuntimeBackend

Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

* Export GridSearch
Rename common types

Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

* Add OptimizationJob constant

Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

* Change to BaseAlgorithm

Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

* Keep func_args for Trainer

Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

* Use PyPI package for Katib models

Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

* Update lock file

Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

---------

Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

--- a/.github/workflows/check-pr-title.yaml
+++ b/.github/workflows/check-pr-title.yaml
@@ -33,6 +33,7 @@ jobs:
             ci
             docs
             examples
+            optimizer
             scripts
             test
             trainer
