--- a/.github/workflows/test-python.yaml
+++ b/.github/workflows/test-python.yaml
@@ -10,8 +10,16 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  pre-commit:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+      - uses: pre-commit/action@v3.0.1
+
   test:
     runs-on: ubuntu-latest
+    needs: pre-commit
     strategy:
       fail-fast: false
       matrix:
