feat(trainer): Add local notebook examples to E2E (#149)
Signed-off-by: Fiona Waters <fiwaters6@gmail.com>

--- a/.github/workflows/test-e2e.yaml
+++ b/.github/workflows/test-e2e.yaml
@@ -41,6 +41,9 @@ jobs:
 
           echo "Installing Kubeflow SDK locally"
           pip install .
+
+          echo "Installing Kubeflow SDK with Docker support for local notebooks"
+          pip install '.[docker]'
         working-directory: . # Ensure pip runs from the SDK repo root
 
       - name: Setup cluster
@@ -62,6 +65,14 @@ jobs:
           make test-e2e-notebook \
             NOTEBOOK_INPUT=./examples/pytorch/question-answering/fine-tune-distilbert.ipynb \
             NOTEBOOK_OUTPUT=../artifacts/notebooks/${{ matrix.kubernetes-version }}_fine-tune-distilbert.ipynb \
+            PAPERMILL_TIMEOUT=900
+          make test-e2e-notebook \
+            NOTEBOOK_INPUT=./examples/local/local-container-mnist.ipynb \
+            NOTEBOOK_OUTPUT=../artifacts/notebooks/${{ matrix.kubernetes-version }}_local-container-mnist.ipynb \
+            PAPERMILL_TIMEOUT=900
+          make test-e2e-notebook \
+            NOTEBOOK_INPUT=./examples/local/local-training-mnist.ipynb \
+            NOTEBOOK_OUTPUT=../artifacts/notebooks/${{ matrix.kubernetes-version }}_local-training-mnist.ipynb \
             PAPERMILL_TIMEOUT=900
         working-directory: . # Execute make from the root of the SDK repo
 
