--- a/.github/workflows/test-e2e.yaml
+++ b/.github/workflows/test-e2e.yaml
@@ -39,11 +39,8 @@ jobs:
           echo "Installing Papermill and Jupyter"
           pip install papermill==2.6.0 jupyter==1.1.1 ipykernel==6.29.5
 
-          echo "Installing Kubeflow SDK locally"
-          pip install .
-
-          echo "Installing Kubeflow SDK with Docker support for local notebooks"
-          pip install '.[docker]'
+          echo "Install Kubeflow SDK with Docker support for local Notebooks"
+          pip install "kubeflow[docker] @ git+https://github.com/kubeflow/sdk.git@main"
         working-directory: . # Ensure pip runs from the SDK repo root
 
       - name: Setup cluster
