fix: update permissions for welcome workflow to avoid 403 error (#181)
* fix: update permissions for welcome workflow to avoid 403 errors

Signed-off-by: Aniket Patil <aniketpatil2027@gmail.com>

* fix: remove unnecessary permissions, keep only contents: write

Signed-off-by: Aniket Patil <aniketpatil2027@gmail.com>

* fix: move contents: write to workflow-level permissions

Signed-off-by: Aniket Patil <aniketpatil2027@gmail.com>

* fix: replace pull_request with pull_request_target

Signed-off-by: Aniket Patil <aniketpatil2027@gmail.com>

---------

Signed-off-by: Aniket Patil <aniketpatil2027@gmail.com>

--- a/.github/workflows/welcome-new-contributors.yaml
+++ b/.github/workflows/welcome-new-contributors.yaml
@@ -1,7 +1,7 @@
 name: Welcome new contributors
 
 on:
-  pull_request:
+  pull_request_target:
     types:
       - opened
   issues:
@@ -9,6 +9,7 @@ on:
       - opened
 
 permissions:
+  contents: write
   issues: write
   pull-requests: write
 
@@ -35,6 +36,7 @@ jobs:
 
             Feel free to ask questions in the comments if you need any help or clarification!
             Thanks again for contributing to Kubeflow! 🙏
+
           pr_message: |
             🎉 **Welcome to the Kubeflow SDK!** 🎉
 
